--- a/AulaComponentesInterface/app/src/main/res/layout/activity_main.xml
+++ b/AulaComponentesInterface/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="0dp"
+        android:layout_width="379dp"
         android:layout_height="61dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:text="JOGAR"
+        android:text="@string/botao_jogar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
