--- a/AulaComponentesInterface/app/src/main/res/layout/activity_main.xml
+++ b/AulaComponentesInterface/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,21 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="379dp"
-        android:layout_height="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/botao_jogar"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Button"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="TextView"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
